--- a/show.html
+++ b/show.html
@@ -3,7 +3,7 @@
 </head>
 <body>
 <div style="width: 640px; height: 360px; ">
-	<script type="text/javascript" src="player/sewise.player.min.js?server=vod&type=m3u8&videourl=&sourceid=&autostart=true&starttime=0&lang=en_US&logo=http://onvod.sewise.com/libs/swfplayer/skin/images/logo.png&title=VodVideo&buffer=5&skin=vodWhite"></script>
+	<script type="text/javascript" src="player/sewise.player.min.js?server=vod&type=m3u8&videourl=http://jackzhang1204.github.io/materials/m3u8/aes128/test.m3u8&sourceid=&autostart=true&starttime=0&lang=en_US&logo=http://onvod.sewise.com/libs/swfplayer/skin/images/logo.png&title=VodVideo&buffer=5&skin=vodWhite"></script>
 </div>
 </body>
 </html>
